--- a/frontend/todolist/src/app.css
+++ b/frontend/todolist/src/app.css
@@ -9,7 +9,7 @@
 }
 
 body {
-	background-color: #0099ff;
+	background-image: radial-gradient(blue, white);
 }
  main{
 	background-color: #FFF;
@@ -18,8 +18,4 @@ body {
 	width: 90%;
 	margin: 10% auto;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3) 
- }
-
- tr:nth-child(even){
-	background-color: #F5F5F5
  }
