--- a/frontend/todolist/src/app.css
+++ b/frontend/todolist/src/app.css
@@ -9,7 +9,7 @@
 }
 
 body {
-	background-image: radial-gradient(blue, white);
+	background-image: radial-gradient(black, gray);
 }
  main{
 	background-color: #FFF;
