--- a/frontend/todolist/src/app.css
+++ b/frontend/todolist/src/app.css
@@ -1,21 +1,37 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto");
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined");
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: "Roboto", sans-serif;
-	outline: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  outline: none;
 }
 
 body {
-	background-image: radial-gradient(black, gray);
+  background-image: radial-gradient(black, gray);
 }
- main{
-	background-color: #FFF;
-	border-radius: 8px;
-	padding: 1.5rem;
-	width: 90%;
-	margin: 10% auto;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3) 
- }
+main {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 1.5rem;
+  width: 90%;
+  margin: 10% auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+.flex-container {
+  padding: 0.5rem 1rem; /* Combina padding-top, padding-right, padding-bottom e padding-left */
+  border: 1px solid; /* Combina border-width e border-style */
+  text-align: center; /* Alinha o texto no centro */
+  display: flex;
+  justify-content: space-between;
+  align-items: center; /* opcional, alinha verticalmente no centro */
+}
+
+.flex-container span {
+  margin-right: 1rem;
+}
+
+.flex-container button {
+  margin-left: 1rem;
+}
